--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "object.assign": "^4.0.4",
     "object.values": "^1.0.4",
     "prop-types": "^15.5.10",
+    "react-bootstrap": "^0.31.0",
     "react-moment-proptypes": "^1.4.0",
     "react-portal": "^3.1.0"
   },
