--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "chai": "^4.0.1",
     "coveralls": "^2.13.1",
     "cross-env": "^5.0.0",
+    "css-loader": "^0.28.4",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
@@ -109,6 +110,7 @@
     "object.assign": "^4.0.4",
     "object.values": "^1.0.4",
     "prop-types": "^15.5.10",
+    "rc-tree": "^1.5.0",
     "react-bootstrap": "^0.31.0",
     "react-moment-proptypes": "^1.4.0",
     "react-portal": "^3.1.0"
