--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "precover": "rimraf coverage",
     "cover": "cross-env NODE_ENV=test node --max-old-space-size=2048 $(which nyc) npm run mocha test",
     "lint": "eslint --ext .js,.jsx src test",
+    "tdd": "mocha test --watch",
     "mocha": "mocha ./test/_helpers",
     "react:clean": "rimraf node_modules/react node_modules/react-dom node_modules/react-addons-test-utils",
     "react:14": "rimraf node_modules/.bin/npm && npm run react:clean && npm i react@0.14 react-dom@0.14 react-addons-test-utils@0.14",
