--- a/package.json
+++ b/package.json
@@ -103,7 +103,8 @@
     "sinon-sandbox": "^1.0.2",
     "ssc-refer2": "^0.1.35",
     "style-loader": "^0.16.1",
-    "webpack": "^1.15.0"
+    "webpack": "^1.15.0",
+    "yzb-comp": "^0.1.1"
   },
   "dependencies": {
     "airbnb-prop-types": "^2.5.4",
@@ -122,7 +123,8 @@
     "rc-tree": "^1.5.0",
     "react": ">=0.14",
     "react-dom": ">=0.14",
-    "ssc-refer2": "^0.1.35"
+    "ssc-refer2": "^0.1.35",
+    "yzb-comp": "^0.1.1"
   },
   "greenkeeper": {
     "ignore": [
