ref #15 在档案转换标签页添加参照

--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "react-dom": "^15.5.4",
     "react-svg-loader": "^1.1.1",
     "react-test-renderer": "^15.5.4",
+    "react-with-context": "^1.2.1",
     "rimraf": "^2.6.1",
     "safe-publish-latest": "^1.1.1",
     "sass-loader": "^4.1.1",
@@ -110,6 +111,7 @@
     "airbnb-prop-types": "^2.5.4",
     "classnames": "^2.2.5",
     "consolidated-events": "^1.0.1",
+    "immutability-helper": "^2.2.3",
     "lodash.throttle": "^4.1.1",
     "object.assign": "^4.0.4",
     "object.values": "^1.0.4",
