--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
     "object.assign": "^4.0.4",
     "object.values": "^1.0.4",
     "prop-types": "^15.5.10",
+    "rc-trigger": "^1.11.2",
     "react-bootstrap": "^0.31.0",
     "react-moment-proptypes": "^1.4.0",
     "react-portal": "^3.1.0"
