--- a/package.json
+++ b/package.json
@@ -102,10 +102,10 @@
     "sass-loader": "^4.1.1",
     "sinon": "^2.3.2",
     "sinon-sandbox": "^1.0.2",
-    "ssc-refer2": "^0.1.35",
+    "ssc-refer": "^0.1.37",
     "style-loader": "^0.16.1",
     "webpack": "^1.15.0",
-    "yzb-comp": "^0.1.1"
+    "yzb-comp": "^0.1.5"
   },
   "dependencies": {
     "airbnb-prop-types": "^2.5.4",
@@ -126,7 +126,7 @@
     "rc-tree": "^1.5.0",
     "react": ">=0.14",
     "react-dom": ">=0.14",
-    "ssc-refer2": "^0.1.35",
+    "ssc-refer": "^0.1.37",
     "yzb-comp": "^0.1.1"
   },
   "greenkeeper": {
